crates/swc-react-native-codegen/tests/snapshots/transform_flow_test__modern_readonly_minimal_view_props.snap
---
source: crates/swc-react-native-codegen/tests/transform_flow_test.rs
assertion_line: 316
expression: result
---
import codegenNativeComponent from 'codegenNativeComponent';
import type { ViewProps } from 'ViewPropTypes';
type SwitchNativeProps = Readonly<{
    __flow_spread: ViewProps;
}>;
const NativeComponentRegistry = require('react-native/Libraries/NativeComponent/NativeComponentRegistry');
let nativeComponentName = 'Switch';
export const __INTERNAL_VIEW_CONFIG = {
    uiViewClassName: "Switch",
    validAttributes: {}
};
export default NativeComponentRegistry.get(nativeComponentName, ()=>__INTERNAL_VIEW_CONFIG);
