crates/swc-react-native-codegen/tests/snapshots/transform_flow_test__not_a_native_component.snap
---
source: crates/swc-react-native-codegen/tests/transform_flow_test.rs
expression: result
---
const requireNativeComponent = require('requireNativeComponent').default;
export default 'Not a view config';
